# ThreatFlow

./: .gitattributes  CONTRIBUTING.md  README.md  pyproject.toml  roadmap.md
.claude/: settings.local.json
catalog/actions/: case.yaml  email.yaml  endpoint.yaml  identity.yaml  network.yaml
catalog/mappings/: attack.yaml  d3fend.yaml
docs/: generate_pdf.py
examples/: custom_action.yaml  custom_adapter.py
playbooks/: compromised_account.yaml  phishing_response.yaml  ransomware_response.yaml
schemas/: action.schema.json  playbook.schema.json  provider_config.schema.json
src/opensecops/: __init__.py
src/opensecops/adapters/: __init__.py  base.py
src/opensecops/adapters/crowdstrike/: __init__.py  adapter.py
src/opensecops/adapters/defender/: __init__.py  adapter.py
src/opensecops/adapters/splunk_soar/: __init__.py  adapter.py
src/opensecops/cli/: __init__.py  _registry.py  actions.py  main.py  plan.py  playbook.py  run.py
src/opensecops/core/: __init__.py  executor.py  loader.py  models.py  registry.py
src/opensecops/mappings/: __init__.py  mitre.py
src/opensecops/playbook/: __init__.py  executor.py  models.py  validator.py
src/threatflow/: __init__.py
src/threatflow/adapters/: __init__.py  base.py
src/threatflow/adapters/crowdstrike/: __init__.py  adapter.py
src/threatflow/adapters/defender/: __init__.py  adapter.py
src/threatflow/adapters/splunk_soar/: __init__.py  adapter.py
src/threatflow/cli/: __init__.py  _registry.py  actions.py  main.py  plan.py  playbook.py  run.py
src/threatflow/core/: __init__.py  executor.py  loader.py  models.py  registry.py
src/threatflow/mappings/: __init__.py  mitre.py
src/threatflow/playbook/: __init__.py  executor.py  models.py  validator.py
tests/: conftest.py  test_adapters.py  test_executor.py  test_loader.py  test_models.py  test_playbook.py  test_registry.py
